crates/glyim-typeck/test_data/run-pass/default_type.g
// test-mode: run-pass
fn main() {
    let _x: <i32 as DefaultIter>::Item = ();
}
